@@ -1,8 +1,8 @@
-ArgumentKeys=1
-Arguments=%1
+ArgumentKeys=1,3
+Arguments=%1,%1
 CollectionType=2
 FormatType=6
 Name=Cat File
 Type=data-source
-UpdateArgs=%{title}
+UpdateArgs=%{title} %{isbn}
 Uuid={d8eeb500-0333-4c29-a390-618c97e060cb}
